k8/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fsl-deployment
  namespace: production
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fsl-application
  template:
    metadata:
      labels:
        app: fsl-application
    spec:
      containers:
      - name: fsl-application
        image: build-v1:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
