k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fsl-service
  namespace: production
spec:
  selector:
    app: fsl-application
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 3000
  type: ClusterIP
